--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     which I developed through my career, in the Army and at the
     University, as well as customers service and communication skills
     through my full-time job at Pixellot.-->
-    <p><a href="file:///Users/gilsinai/Desktop/gils/web_development/HTML-personal_site/contactme.html">Contact me</a></p>
+    <p><a href="contactme.html">Contact me</a></p>
     </td>
   </tr>
 </table>
