--- a/contactme.html
+++ b/contactme.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>👤 Gil's personal site - Contact me</title>
+    <link href="css/style.css" rel="stylesheet">
+
   </head>
   <body>
   <h1>My Contact Details</h1>
