--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>👤 Gil's personal site</title>
+  <title>Gil's personal site 👤</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="favicon.ico" rel="icon">
+
+
+
 </head>
 
 <body>
+
 <table cellspacing="20">
   <tr>
     <td>
-      <img src="images/profile2.jpg" alt="Gil profile.jpg">
+      <img src="images/profile2.jpg" alt="Gil profile img">
     </td>
     <td>
-      <h1>Gil Sinai</h1>
+      <h1 class="prime-title"> Gil Sinai</h1>
       <p><em>QA Automation Engineer</em>  </p>
       <p>I am looking to develop and use my skills at the right place with the
       right people and mentors.</p>
@@ -25,6 +31,9 @@
     </td>
   </tr>
 </table>
+<div class="middle-container">
+  <img src="images/mountain.png" alt="mountain img">
+</div>
 <hr>
 <h3>Education</h3>
 <ul>
@@ -68,7 +77,7 @@ division including medics course and commander responsibilities.</p>
 
 <h3>Skills</h3>
 
-<table cellspacing="20" >
+  <table cellspacing="20" >
   <tr>
     <td>
       <table>
@@ -77,13 +86,22 @@ division including medics course and commander responsibilities.</p>
         <td>⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>SolidWorks</td>
+        <td>Selenium</td>
+        <td>⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web development</td>
         <td>⭐️⭐️⭐️</td>
       </tr>
       </table>
     </td>
     <td>
       <table>
+        <tr>
+          <td>Solidworks</td>
+          <td>⭐️⭐️⭐️</td>
+        </tr>
+        <tr>
       <tr>
       <td>Arduino</td>
       <td>⭐️⭐️</td>
