--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <table cellspacing="20">
   <tr>
     <td>
-      <img src="images/profile2.jpg" alt="Gil profile img">
+      <img class="profile-image" src="images/profile2.png" alt="Gil profile img">
     </td>
     <td>
       <h1 class="prime-title"> Gil Sinai</h1>
@@ -31,9 +31,6 @@
     </td>
   </tr>
 </table>
-<div class="middle-container">
-  <img src="images/mountain.png" alt="mountain img">
-</div>
 <hr>
 <h3>Education</h3>
 <ul>
