--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <li><a href=https://www.afeka.ac.il/>Afeka Academic College of Engineering</a>, Mechanical Engineering, Tel-Aviv 2016-2020</li>
   <li><a href="https://www.youtube.com/watch?v=HaIID-lSJ1M&ab_channel=GilSinai">Final project (in collaboration with IAI)</a> – excellent award</li>
   <li>PYTHON Course at Devops Experts 2020</li>
+  <li>DEVOPS Course at Develeap 2024</li>
 </ul>
 <hr>
 
@@ -83,11 +84,11 @@ division including medics course and commander responsibilities.</p>
         <td>⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Selenium</td>
+        <td>Docker</td>
         <td>⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Web development</td>
+        <td>AWS</td>
         <td>⭐️⭐️⭐️</td>
       </tr>
       </table>
@@ -95,16 +96,16 @@ division including medics course and commander responsibilities.</p>
     <td>
       <table>
         <tr>
-          <td>Solidworks</td>
+          <td>Linux</td>
           <td>⭐️⭐️⭐️</td>
         </tr>
         <tr>
       <tr>
-      <td>Arduino</td>
-      <td>⭐️⭐️</td>
+      <td>K8S</td>
+      <td>⭐️⭐️⭐️</td>
       </tr>
       <tr>
-      <td>Robot framework</td>
+      <td>Jenkins</td>
       <td>⭐️⭐️⭐️⭐️</td>
       </tr>
       </table>
@@ -117,11 +118,7 @@ division including medics course and commander responsibilities.</p>
 <ol>
   <li><a href="https://performancerock.co.il/">Climbing - Bouldering</a></li>
   <li><a href="https://www.youtube.com/watch?v=1FHNcsRUMZc&ab_channel=GilSinai">Playing guitar</a></li>
-  <li>Playing Soccer</li>
 </ol>
-
-
-
 
 </body>
 </html>
